# BCIPy

demo/prog/: Operator.ini
demo/python/: TriangleApplication.py
foundation/: CMakeLists.txt
foundation/Application/: CMakeLists.txt  PythonApplication.cpp
foundation/SignalProcessing/: CMakeLists.txt
foundation/SignalSource/: CMakeLists.txt
foundation/shared/: PythonFilter.cpp  PythonFilter.h  PythonLink24.cpp  PythonLink25.cpp  PythonWrapper.cpp  PythonWrapper.h  gcctest.cpp
foundation/shared/python24/include/: pyconfig.h
framework/: setup.py
framework/BCPy2000/: Diagnostics.py  EmbeddedPythonConsole.py  Generic.py  GenericApplication.py  GenericSignalProcessing.py  GenericSource.py  PrecisionTiming.py  Shortcuts.py  VisionEggRenderer.py
framework/BCPy2000/AppTools/: Boxes.py  ConfusionMatrices.py  Coords.py  CurrentRenderer.py  Displays.py  Meters.py  ParallelPort.py  Shapes.py  StateMonitors.py  StimulusQueue.py  __init__.py
framework/BCPy2000/BCI2000Tools/: AudioSourceModule.py  Classification.py  DataFiles.py  FileReader.py  NIASourceModule.py  Parameters.py  PlaybackSourceModule.py  SpellerTools.py  TimingAnalysis.py
framework/BCPy2000/LangTools/: ModelTesting.py  ProgressMonitoring.py  TextPrediction.py  TreeStructure.py  __init__.py
framework/BCPy2000/SigTools/: Basic.py  Buffering.py  ElectrodePositions.py  Electrodes.py  Filtering.py  LearningTools.py  NumTools.py  Optimization.py  Plotting.py  Stimuli.py  __init__.py  klr.py
framework/BCPy2000/WavTools/: Background.py  Base.py  FakePyGame.py  MasterVolume.py  Modulate.py  Plotting.py  (+3 more)
